# blended-django-02-06

./: README.md  docker-compose.yaml  manage.py  messages.json  pyproject.toml
trip_app/: admin.py  models.py  models_mongo.py  urls.py  views.py
trip_app/management/commands/: import_messages.py
trip_app/migrations/: 0001_initial.py  0002_destination_alter_trip_destination_review.py  0003_friends.py  0004_rename_friends_friend.py
trip_app/templates/: base.html  index.html  login.html  signup.html
trips_project/: asgi.py  settings.py  urls.py  wsgi.py
users/: forms.py  urls.py  views.py
